test/expected/rerr_arith_trailing.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$((1 2))"]
[Word
  Unquoted "echo"
]
[Word
  ArithmeticExpansion "1 2"
]
shit: 2:6: error: Arithmetic: unexpected '2' after the expression, operator is missing between two values.
     2 |  echo $((1 2))
       |       ^~~~~~~~ here.
